# gha-repo-manager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  action.yml  noxfile.py  package-requirements.txt  pyproject.toml  release-please-config.json  temp.md  test.py
.github/: .release-please-manifest.json  dependabot.yml  settings.yml
.github/scripts/: cleanup-ghcr.sh
.github/workflows/: action-integration.yml  codeql.yml  dependabot-auto-merge.yml  generate-docs.yml  issues.yml  make-docker-image.yml  promote-rc-to-release.yml  python-ci.yml  release-docker-images.yml  release-major-version-tag.yml  release-please.yml  release.yml  test-docker-image.yml
docs/: tips.md
examples/: settings-clear.yml  settings.yml
repo_manager/: main.py
repo_manager/gh/: __init__.py  branch_protections.py  collaborators.py  enterprise_rulesets.py  enterprise_settings.py  environments.py  files.py  labels.py  org_rulesets.py  org_secrets.py  org_settings.py  rulesets.py  secrets.py  settings.py  teams.py  variables.py
repo_manager/github/: collaborators.py  environments.py  secrets.py  variables.py
repo_manager/schemas/: __init__.py  branch_protection.py  collaborator.py  enterprise_settings.py  environment.py  file.py  label.py  org_settings.py  ruleset.py  secret.py  team.py
repo_manager/utils/: __init__.py  _inputs.py  markdown.py
tests/unit/: test_main.py  test_markdown.py  test_safe_path.py
tests/unit/gh/: test_labels.py
tests/unit/github/: test_files.py
tests/unit/schemas/: test_file.py
