[tool.poetry]
name = "gha-repo-manager"
version = "2.2.3"
description = "Manage your Github repo(s) settings and secrets using Github Actions and a yaml file"
authors = ["Actuary Sailor <24359398+actuarysailor@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "repo_manager"}]

[tool.poetry.scripts]
repo-manager = "repo_manager.main:main"


[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.3"
typing-extensions = "^4.12.2"
actions-toolkit = "^0.1.15"
pygithub = "^2.3.0"
pyyaml = "^6.0"
pydantic-extra-types = "^2.7.0"
gitpython = "^3.1.43"
tabulate = "^0.9.0"
# Transitive dep lower-bounds to address known CVEs
cryptography = ">=46.0.6"
filelock = ">=3.20.3"
pygments = ">=2.20.0"
pyjwt = ">=2.12.0"
pynacl = ">=1.6.2"
requests = ">=2.33.0"
urllib3 = ">=2.6.3"
setuptools = ">=78.1.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
nodeenv = "^1.9.0"
ruff = "^0.4.6"
pytest = "^9.0.3"
pytest-mock = "^3.12.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^1.0.0"
bandit = "^1.7.9"
pip-audit = "^2.7"
mypy = "^1.11.2"
pre-commit-hooks = "^4.5.0"
reorder-python-imports = "^3.14.0"
pytest-xdist = "^3.2.1"
pyupgrade = "^3.15.0"
pyflakes = "^3.1.0"
black = "^26.1.0"
# Transitive dev dep lower-bounds to address known CVEs
virtualenv = ">=20.36.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["tests", "noxfile.py", ".github/scripts"]

[tool.bandit.assert_used]
skips = ["repo_manager/github/branch_protections.py"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[tool.pytest.ini_options]
norecursedirs = ".github ci .git .idea"
addopts = "--cov=repo_manager --cov-report xml:.coverage.xml --cov-report=term-missing"
